# nomic-vlm-inference

./: .pre-commit-config.yaml  Makefile  PRODUCTION_CHECKLIST.md  README.md  create_test_image.py  docker-compose.yml  env.example  logs.txt  pyproject.toml  requirements-dev.txt  test_offline.py
.github/workflows/: ci.yml  docker.yml
api/: Dockerfile  app.py  requirements.txt
cloudflare/: wrangler.toml
cloudflare/worker/: index.ts  package.json  tsconfig.json
tests/: __init__.py  test_api.py
